# mekaneck

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIXES_APPLIED.md  LICENSE  Makefile  README.md  SETUP_COMPLETE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
blindhorse/: PACKAGE_CONTENTS.md  README.md  __init__.py  fix_json_serialization.py  orchestrator.py  requirements.txt  run_validation.py  utils.py  visualization.py
blindhorse/docs/: COMPLETE_FRAMEWORK_EXTENSION.md  VIRTUAL_CATEGORICAL_SPECTROMETER.md  electric-field-mechanisms.tex
blindhorse/docs/categorical-partitioning/: categorical-partitioning-mechanisms.tex
blindhorse/docs/hybrid-fluidic-circuit-dynamics/: FRAMEWORK_STRATEGY.md  README.md  TERMINOLOGY_GUIDE.md  hybrid-fluidic-circuit-dynamics.tex  references.bib
blindhorse/validators/: __init__.py  categorical_state.py  gear_ratio.py  hardware_oscillation.py  harmonic_network.py  maxwell_demon.py  phase_lock.py  semantic_gravity.py  sentropy.py  therapeutic_prediction.py  trans_planckian.py
blindhorse/validators/visualisations/: COMPLETE_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.txt  NEW_VISUALIZATIONS_SUMMARY.md  VISUALIZATION_FIX_SUMMARY.md  entropy.py  fix_all_visualizations.py  gears.py  generate_all_figures.py  gravity.py  hardware_visualisations.py  harmonic.py  hplus_field.py  oxygen_categorical.py  pharmaceutical_maxwell_demon.py  phases.py  run_all_working.py  state.py  state_fixed.py  therapeutic.py  transplanckian.py  virtual_categorical_spectrometer.py
docs/catalysis/: categorical-catalysis-mechanism.tex  references.bib
docs/catalysis/sections/: aperture-model.tex  autocatalytic-apertures.tex  carbonic-anhydrase.tex  categorical-exclusion.tex  gas-network-topology.tex  haber-process.tex  penultimate-step-equilibrium.tex  rubisco-multi-aperture.tex  temporal-independence.tex  topological-network.tex
docs/categorical-completion/: PAPER_UPDATES_SUMMARY.md  categorical-completion-consiousness.tex
docs/charge-coupled-hybrid-microfluidic-systems/: IDENTITY_AND_NAMING_CIRCUITS_SUMMARY.md  charged-coupled-hybrid-microfluidic-circuits.tex  references.bib
docs/charge-coupled-hybrid-microfluidic-systems/sections/: autocatalytic-charge-redistribution.tex  charge-balance-universal-attractor.tex  coupled-depth-circuit-dynamics.tex  dissipation-transitions.tex  functional-emergence-principle.tex  identity-emergence-meta-recognition.tex  multi-circuit-systems.tex  non-grounded-naming-circuits.tex  subsystem-replacement-dynamics.tex  trajectory-bias-geometric-modification.tex
docs/computing/: KWASA_KWASA_BIOLOGICAL_OSCILLATORY_COMPUTING.md  KWASA_KWASA_FOR_CONSCIOUSNESS_PROGRAMMING.md  PAPER_EXTENSION_PLAN_KWASA.md  source.tex
docs/computing/kuramoto-oscillator/: kuramoto-oscillator-phase-computing.tex
docs/computing/oxygen-hydrogen-coupling/: PAPER_VERIFICATION_SUMMARY.md  captions.tex  phase_lock_computing.bib
docs/electron-trajectories/: HIERARCHICAL_TERNARY_ENCODING_ADDED.md  OMNIDIRECTIONAL_SECTION_ADDED.md  PAPER_STRUCTURE_SUMMARY.md  deterministic-electron-trajectories.tex  electron-trajectories.tex  figures.tex  references.bib
docs/electron-trajectories/figures/: electron-trajectory-determination.tex  generate_all_validation_panels.py  generate_omnidirectional_panels.py
docs/electron-trajectories/sections/: atom-derivation.tex  categorical-measurement.tex  classical-mechanics.tex  electromagnetism.tex  experimental-setup.tex  measurement-protocol.tex  omnidirectional-tomography.tex  ternary-representation.tex  (+2 more)
docs/equations-of-state-hybrid-circuits/: CATEGORICAL_NECESSITY_ADDITIONS.md  COMPLETE_FRAMEWORK_STATUS.md  COMPREHENSIVE_VALIDATION_SUMMARY.md  DYNAMIC_EQUATIONS_ADDITION.md  INTEGRATION_COMPLETE.md  MASTER_VALIDATION_INDEX.md  SECTION_REORGANIZATION_COMPLETE.md  TAP_ANALOGY_DIAGRAM.md  TRIPLE_STRUCTURE_PENDULUM.md  VALIDATION_README.md  VALIDATION_SUMMARY.md  comprehensive_validation.py  partition-based-equations-of-state-hybrid-microfluidic-circuits.tex  references.bib  validation_experiments.py
docs/geometry/: CONSCIOUSNESS_GEOMETRY_STATUS.md  figures-geometry.tex  geometry-of-consciousness.tex
docs/hardware/: computational-pharmacodynamics.tex  computational-pharmacogenomics.tex  gas-information-model.tex  hardware-based-lipid-language-models.tex  integrated-hybrid-microfluidic-circuits.tex
docs/instruments/: capacitative-dielectric-analyzer.tex  electronic-field-mapper.tex  vibration-analyzer.tex
docs/perception/: perception-figures.tex
docs/pharmaceutical-maxwell-demon/: categorical-cellular-phaselock.tex  hybrid-meta-language-pharmacodynamics.tex  intracellular-phase-lock-computing.tex  metabolic-hierarchy-computing.tex
docs/thought-metabolism/: COMPLETION_SUMMARY.md  METABOLISM_PAPER_SUMMARY.md  TRILOGY_STATUS.md  VALIDATOR_FRAMEWORK_STRATEGY.md  metabolic-cost-of-geometries.tex
mekaneck/virtualbrain/: __init__.py  orchestrator.py  run_validation.py  utils.py
virtual_brain/: Cargo.toml
virtual_brain/crates/vb-cli/: Cargo.toml
virtual_brain/crates/vb-cli/src/: main.rs
virtual_brain/crates/vb-core/: Cargo.toml
virtual_brain/crates/vb-core/src/: constants.rs  error.rs  lib.rs
virtual_brain/crates/vb-core/src/types/: circuit_state.rs  mental_state.rs  mod.rs  partition_coord.rs  s_coord.rs  ternary_addr.rs
virtual_brain/crates/vb-engine/: Cargo.toml
virtual_brain/crates/vb-engine/src/: lib.rs  poincare_computer.rs  state_manager.rs
virtual_brain/crates/vb-operators/: Cargo.toml
virtual_brain/crates/vb-operators/src/: charge_ops.rs  dynamics_ops.rs  lib.rs  neural_ops.rs  partition_ops.rs  poincare_ops.rs  sentropy_ops.rs  ternary_ops.rs
virtual_brain/crates/vb-validators/: Cargo.toml
virtual_brain/crates/vb-validators/src/: base.rs  consciousness_validator.rs  kuramoto_validator.rs  lib.rs  orchestrator.rs  partition_validator.rs  result.rs
(+183 files in other folders)
