[package]
name = "vb-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vb"
path = "src/main.rs"

[dependencies]
vb-core = { workspace = true }
vb-operators = { workspace = true }
vb-engine = { workspace = true }
vb-validators = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
