[package]
name = "vb-engine"
version.workspace = true
edition.workspace = true

[dependencies]
vb-core = { workspace = true }
vb-operators = { workspace = true }
serde = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
