[package]
name = "vb-operators"
version.workspace = true
edition.workspace = true

[dependencies]
vb-core = { workspace = true }
serde = { workspace = true }
ndarray = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
